--- a/app/App/Edition/tpl/edition-header.html
+++ b/app/App/Edition/tpl/edition-header.html
@@ -11,7 +11,7 @@
 			<ul class="nav nav-pills float-right">
 				<li class="nav-item" ng-include="'/webapp/app/App/Edition/tpl/edition-header-editButton.html'"></li>
 				<li class="nav-item"><a class="nav-link" ui-sref="transcript.app.search"><i class="fa fa-search fa-lg" aria-hidden="true"></i> Autres testaments</a></li>
-				<li class="nav-item dropdown">
+				<li class="nav-item dropdown" ng-if="entity.resources.length > 1">
 					<a class="nav-link dropdown-toggle"  role="button" id="dropdownMenuNavResources" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fa fa-files-o fa-lg" aria-hidden="true"></i> Autres pages</a>
 					<ul class="dropdown-menu" aria-labelledby="dropdownMenuNavResources">
 						<li ng-repeat="iResource in entity.resources">
