--- a/app/App/Home/Home.html
+++ b/app/App/Home/Home.html
@@ -22,6 +22,9 @@
 
 <main class="container" role="main">
     <div class="row">
+        <div class="col-md-12 mb-5"><a href="/webapp/app/web/images/flyer.pdf"><img class="img-fluid" src="/webapp/app/web/images/lancement-plateforme.png"/></a></div>
+    </div>
+    <div class="row">
         <div class="col-lg-4 col-md-12">
             <!--<div class="card bg-none" data-ng-repeat="content in staticContents">
                    <h2 class="card-header bg-dark">{{ content.title }}</h2>
