--- a/app/App/Security/Login/Login.html
+++ b/app/App/Security/Login/Login.html
@@ -30,7 +30,7 @@
                     <span ng-if="submit.success == false && submit.loading == true">Connexion en cours <i class="fa fa-spin fa-circle-o-notch"></i></span>
                     <span ng-if="submit.success == true">Vous êtes connecté !</span>
                 </button>
-                <small class="form-text"><a class="text-muted" ui-sref="transcript.app.security.resetting.request">Mot de passe oublié</a></small>
+                <small class="form-text mt-2"><a class="text-muted" ui-sref="transcript.app.security.resetting.request">Mot de passe oublié</a></small>
             </div>
         </div>
     </form>
