--- a/app/System/Comment/tpl/Thread.html
+++ b/app/System/Comment/tpl/Thread.html
@@ -1,4 +1,4 @@
-<div class="card bg-body" id="comment-thread">
+<div class="card bg-body d-print-none" id="comment-thread">
     <div id="comment-thread-header" data-ng-include="'/webapp/app/System/Comment/tpl/Thread-header.html'"></div>
     <div class="card-body">
         <div id="comment-thread-contribute" data-ng-include="'/webapp/app/System/Comment/tpl/Thread-contribute.html'"></div>
