--- a/app/App/Contact/Contact.html
+++ b/app/App/Contact/Contact.html
@@ -18,28 +18,28 @@
                 <div class="form-group row">
                     <label for="app-contact-name" class="col-md-3 col-form-label text-md-right">Votre nom <span class="red-color">*</span></label>
                     <div class="col-md-9">
-                        <input id="app-contact-name" class="form-control form-control-sm" ng-model="contact.name" required="required" />
+                        <input id="app-contact-name" class="w-100 form-control form-control-sm" ng-model="contact.name" required="required" />
                     </div>
                 </div>
                 <div class="form-group row">
                     <label for="app-contact-email" class="col-md-3 col-form-label text-md-right">Votre email <span class="red-color">*</span></label>
                     <div class="col-md-9">
-                        <input id="app-contact-email" type="email" class="form-control form-control-sm" ng-model="contact.email" required="required" />
+                        <input id="app-contact-email" type="email" class="w-100 form-control form-control-sm" ng-model="contact.email" required="required" />
                     </div>
                 </div>
                 <div class="form-group row">
                     <label for="app-contact-object" class="col-md-3 col-form-label text-md-right">Objet de votre message <span class="red-color">*</span></label>
                     <div class="col-md-9">
-                        <input id="app-contact-object" class="form-control form-control-sm" ng-model="contact.object" required="required" />
+                        <input id="app-contact-object" class="w-100 form-control form-control-sm" ng-model="contact.object" required="required" />
                     </div>
                 </div>
                 <div class="form-group row">
                     <label for="app-contact-message" class="col-md-3 col-form-label text-md-right">Message <span class="red-color">*</span></label>
                     <div class="col-md-9">
-                        <textarea id="app-contact-message" class="form-control form-control-sm" ng-model="contact.message" required="required"></textarea>
+                        <textarea id="app-contact-message" class="w-100 form-control form-control-sm" ng-model="contact.message" required="required"></textarea>
                     </div>
                 </div>
-                <div class="row text-right">
+                <div class="form-group row text-right">
                     <div class="col-12">
                         <button class="btn btn-sm" type="button"
                                 ng-disabled="!(!!contact.name && !!contact.email && !!contact.object && !!contact.message)"
