--- a/app/App/Training/Content/Exercise/Correction/Correction.html
+++ b/app/App/Training/Content/Exercise/Correction/Correction.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container d-print-none">
     <div ncy-breadcrumb></div>
     <div flash-alert data-active-class="show alert" class="fade" data-duration="10000">
         <!-- Manually hide the alert with `hide()` -->
@@ -38,10 +38,10 @@
         <div class="card-body" ng-bind-html="trainingContent.exerciseCorrectionErrorsToAvoid | trustAsHtml"></div>
     </div>
 
-    <div ng-include="'/webapp/app/App/Training/Content/tpl/content-footer.html'"></div>
+    <div class="d-print-none" ng-include="'/webapp/app/App/Training/Content/tpl/content-footer.html'"></div>
 
     <hr />
-    <div class="mt-4" ui-view="comment"></div>
+    <div class="mt-4 d-print-none" ui-view="comment"></div>
 </main>
 <main class="container" role="main" ng-if="trainingContent.pageStatus != 'public'">
     <div class="alert alert-warning">Oups ... Cette page n'est pas publique pour le moment</div>
