--- a/app/App/Training/Content/Presentation/tpl/training-presentation.html
+++ b/app/App/Training/Content/Presentation/tpl/training-presentation.html
@@ -1,4 +1,4 @@
-<div class="col-12" ng-include="'/webapp/app/App/Training/Content/Presentation/tpl/training-mainContent.html'"></div>
-<div ng-if="trainingContent.illustration != null" class="col-12">
+<div ng-include="'/webapp/app/App/Training/Content/Presentation/tpl/training-mainContent.html'"></div>
+<div ng-if="trainingContent.illustration != null">
 	<img src="{{ trainingContent.illustration | imageRender }}" class="img-fluid" />
 </div>
