--- a/app/System/Navbar/Navbar.html
+++ b/app/System/Navbar/Navbar.html
@@ -18,12 +18,12 @@
 <div class="row">
     <div class="col main-nav p-0">
         <nav role="navigation" id="main-nav" class="navbar navbar-expand-lg navbar-light">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
+            <h1><a  class="navbar-brand" ui-sref="transcript.app.home" ng-bind="preferences.projectTitle"></a></h1>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Afficher/Masquer le menu">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <h1><a ui-sref="transcript.app.home" ng-bind="preferences.projectTitle"></a></h1>
             <div class="collapse navbar-collapse" id="navbar">
-                <ul class="navbar-nav nav nav-justified">
+                <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link" ui-sref="transcript.app.blog">actualités</a></li>
                     <li class="nav-item" ng-if="preferences.discoverHomeContent != null"><a class="nav-link" ui-sref="transcript.app.content({id: preferences.discoverHomeContent})">découvrir</a></li>
                     <li class="nav-item dropdown">
