--- a/app/index.html
+++ b/app/index.html
@@ -7,11 +7,12 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Le projet Testaments de Poilus vise à aboutir à une édition électronique des testaments des Poilus de la Première Guerre mondiale conservés aux Archives nationales et aux Archives départementales des Yvelines. Pour cela, le projet propose au grand public de participer à une opération de transcription collaborative.">
+    <meta name="keywords" content="Testaments de Poilus, Poilus, Première Guerre mondiale, Archives nationales de France, Archives départementales des Yvelines, Université de Cergy-Pontoise, Laboratoire Agora, Laboratoire Etis, Université Paris 8, Minutier centrale des notaires de Paris, Ecole des chartes, Centre Jean Mabillon, Labex Patrima, Fondation des Sciences du Patrimoine, Mission du Centenaire de la Première Guerre mondiale">
 
     <title ng-bind="tfMetaTags.title"></title>
-    <meta ng-repeat="(key, value) in tfMetaTags.properties" name="{{key}}" content="{{value}}" >
-    <link rel="icon" type="image/png" href="web/images/FaviconTdP.png" />
-    <link rel="apple-touch-icon" href="web/images/FaviconTdP.png" />
+    <link rel="icon" type="image/png" href="/webapp/app/web/images/FaviconTdP.png" />
+    <link rel="apple-touch-icon" href="/webapp/app/web/images/FaviconTdP.png" />
 
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -32,11 +33,11 @@
 </head>
 
 <body>
-    <header ui-view="navbar" class="container" role="navigation"></header>
+    <header ui-view="navbar" class="container d-print-none" role="navigation"></header>
 
     <div ui-view="page" id="pageContainer" ></div>
 
-    <footer ui-view="footer"></footer>
+    <footer ui-view="footer" class="d-print-none"></footer>
 
     <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
     <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-route.min.js"></script>
@@ -45,7 +46,7 @@
     <script type="text/javascript" src="//unpkg.com/@uirouter/angularjs@1.0.7/release/angular-ui-router.min.js"></script>
     <script type="text/javascript" src="//code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script type="text/javascript" src="/webapp/app/web/libraries/angular/bootstrap-gh-pages/ui-bootstrap-2.5.0.min.js"></script>
     <script type="text/javascript" src="/webapp/app/web/libraries/angular/bootstrap-gh-pages/ui-bootstrap-tpls-2.5.0.min.js"></script>
     <script type="text/javascript" src="/webapp/app/web/libraries/angular/yaml-js/dist/yaml.min.js"></script>
@@ -179,17 +180,18 @@
     <script type="text/javascript" src="/webapp/app/System/Filters/PrefixRenderFilter.js"></script>
     <script type="text/javascript" src="/webapp/app/System/Filters/ObjectToIdFilter.js"></script>
     <script type="text/javascript" src="/webapp/app/System/Filters/ResourceTypeNameFilter.js"></script>
-    <script type="text/javascript" src="/webapp/app/System/Filters/TaxonomyEntityNameConstructFilter.js"></script>
-    <script type="text/javascript" src="/webapp/app/System/Filters/TaxonomyNameFilter.js"></script>
-    <script type="text/javascript" src="/webapp/app/System/Filters/TrainingTypePageNameFilter.js"></script>
-    <script type="text/javascript" src="/webapp/app/System/Filters/TranscriptionStatusNameFilter.js"></script>
-    <script type="text/javascript" src="/webapp/app/System/Filters/TrustAsHtmlFilter.js"></script>
+    <script type="text/javascript" src="/webapp/app/System/Filters/ReverseFilter.js"></script>
     <script type="text/javascript" src="/webapp/app/System/Filters/RoleNameFilter.js"></script>
     <script type="text/javascript" src="/webapp/app/System/Filters/ShuffleFilter.js"></script>
     <script type="text/javascript" src="/webapp/app/System/Filters/SourceRenderFilter.js"></script>
     <script type="text/javascript" src="/webapp/app/System/Filters/StatusFilter.js"></script>
     <script type="text/javascript" src="/webapp/app/System/Filters/StringToArrayFilter.js"></script>
     <script type="text/javascript" src="/webapp/app/System/Filters/StringToDateFilter.js"></script>
+    <script type="text/javascript" src="/webapp/app/System/Filters/TaxonomyEntityNameConstructFilter.js"></script>
+    <script type="text/javascript" src="/webapp/app/System/Filters/TaxonomyNameFilter.js"></script>
+    <script type="text/javascript" src="/webapp/app/System/Filters/TrainingTypePageNameFilter.js"></script>
+    <script type="text/javascript" src="/webapp/app/System/Filters/TranscriptionStatusNameFilter.js"></script>
+    <script type="text/javascript" src="/webapp/app/System/Filters/TrustAsHtmlFilter.js"></script>
     <script type="text/javascript" src="/webapp/app/System/Filters/UcFirstStrictFilter.js"></script>
     <script type="text/javascript" src="/webapp/app/System/Filters/UserIDFromName.js"></script>
     <script type="text/javascript" src="/webapp/app/System/Filters/WillNumberFormat.js"></script>
