--- a/app/App/Search/tpl/Search-results-header.html
+++ b/app/App/Search/tpl/Search-results-header.html
@@ -3,7 +3,7 @@
         <select ng-model="search.resultsSorting" class="custom-select" title="Critère de tri des résultats de recherche">
             <option value="will.willWritingYear">Par année de rédaction</option>
             <option value="will.testator.yearOfDeath">Par année de décès</option>
-            <option value="will.testator.surname">Par nom de testateur</option>
+            <option value="will.testator.indexName">Par nom de testateur</option>
             <option value="_embedded.status">Par statut de transcription</option>
         </select>
     </form>
