--- a/app/System/Footer/Footer.html
+++ b/app/System/Footer/Footer.html
@@ -25,12 +25,14 @@
         </div>
         <div class="col-lg-8 col-md-12" id="partenaires">
             <div class="row align-items-center">
-                <a class="col-md-2 col-4" href="http://www.sciences-patrimoine.org/" target="_blank"><img class="img-fluid" src="/webapp/app/web/images/logos/fondation-sciences-patrimoine.png"/></a>
-                <a class="col-md-2 col-4" href="http://centenaire.org/fr" target="_blank"><img class="img-fluid" src="/webapp/app/web/images/logos/centenaire.jpg"/></a>
-                <a class="col-md-2 col-4" href="http://www.archives-nationales.culture.gouv.fr/" target="_blank"><img class="img-fluid" src="/webapp/app/web/images/logos/archives-nationales.png"/></a>
-                <a class="col-md-2 col-4" href="http://www.archives.yvelines.fr/" target="_blank"><img class="img-fluid" src="/webapp/app/web/images/logos/ad78.jpg"/></a>
-                <a class="col-md-2 col-4" href="https://www.u-cergy.fr/fr/index.html" target="_blank"><img class="img-fluid" src="/webapp/app/web/images/logos/cergy.png"/></a>
-                <a class="col-md-2 col-4" href="http://www.enc-sorbonne.fr/" target="_blank"><img class="img-fluid" src="/webapp/app/web/images/logos/enc.png"/></a>
+                <a class="col-sm" href="http://www.culturecommunication.gouv.fr/" target="_blank"><img class="img-fluid" src="/webapp/app/web/images/logos/ministere-culture.jpg"/></a>
+                <a class="col-sm" href="http://www.sciences-patrimoine.org/" target="_blank"><img class="img-fluid" src="/webapp/app/web/images/logos/fondation-sciences-patrimoine.png"/></a>
+                <a class="col-sm" href="http://centenaire.org/fr" target="_blank"><img class="img-fluid" src="/webapp/app/web/images/logos/centenaire.jpg"/></a>
+                <a class="col-sm" href="http://www.archives-nationales.culture.gouv.fr/" target="_blank"><img class="img-fluid" src="/webapp/app/web/images/logos/archives-nationales.png"/></a>
+                <a class="col-sm" href="http://www.archives.yvelines.fr/" target="_blank"><img class="img-fluid" src="/webapp/app/web/images/logos/ad78.jpg"/></a>
+                <a class="col-sm" href="https://www.u-cergy.fr/fr/index.html" target="_blank"><img class="img-fluid" src="/webapp/app/web/images/logos/cergy.png"/></a>
+                <a class="col-sm" href="http://www.enc-sorbonne.fr/" target="_blank"><img class="img-fluid" src="/webapp/app/web/images/logos/enc.png"/></a>
+                <a class="col-sm" href="http://univ-paris8.fr/" target="_blank"><img class="img-fluid" src="/webapp/app/web/images/logos/paris-8.jpg"/></a>
             </div>
         </div>
     </div>
