--- a/app/App/Search/tpl/Search-results-content-list.html
+++ b/app/App/Search/tpl/Search-results-content-list.html
@@ -1,7 +1,7 @@
 <ul id="listResults" class="list list-unstyled">
     <li class="row" data-ng-repeat="entity in results|orderBy:search.resultsSorting|limitTo:limitToResults">
         <div class="col-12"><div class="badge badge-status" data-ng-class="getStatusClassLabel(entity._embedded.status)">{{ entity._embedded.status | transcriptionStatusName:entity.isShown }}</div></div>
-        <div class="col-2"><a ui-sref="transcript.app.entity({ id: entity.id })"><img class="img-fluid" src="{{ imageService.getThumbnail(entity) }}"/></a></div>
+        <div class="col-2"><a ui-sref="transcript.app.entity({ id: entity.id })"><img class="img-fluid" src="{{ imageService.getThumbnail(entity) }}" onerror="if (this.src != '/webapp/app/web/images/no-images.png') this.src = '/webapp/app/web/images/no-images.png';" /></a></div>
         <div class="col-9">
             <a ui-sref="transcript.app.entity({ id: entity.id })" class="nomTestataire">{{ entity.will.testator.name }}</a><br/>
             <div class="desc">
