--- a/app/Admin/Home/Home.html
+++ b/app/Admin/Home/Home.html
@@ -36,6 +36,7 @@
             <h2>Utilisateurs</h2>
             <ul class="list-group list-group-flush">
                 <li class="list-group-item"><a ui-sref="transcript.admin.user.list">Liste des utilisateurs</a></li>
+                <li class="list-group-item"><a ui-sref="transcript.admin.user.listEmail">Liste des email</a></li>
             </ul>
         </div>
         <div class="col-sm-4 mb-5">
@@ -55,6 +56,7 @@
             <h2>Transcription</h2>
             <ul class="list-group list-group-flush">
                 <li class="list-group-item"><a ui-sref="transcript.admin.transcript.validation">Transcriptions à valider <span class="badge bg-info text-white" ng-bind="transcriptsToValidate.length"></span></a></li>
+                <li class="list-group-item"><a ui-sref="transcript.admin.transcript.update">Modification manuelle</a></li>
             </ul>
         </div>
         <div class="col-sm-4 mb-5">
