--- a/app/Admin/Comments/Comments.html
+++ b/app/Admin/Comments/Comments.html
@@ -11,16 +11,20 @@
     <h1 class="page-heading">Liste des derniers commentaires</h1>
     <div class="row">
         <div class="col-xl-12 col-12">
+            <div class="alert alert-info">Il y a actuellement {{ notReadCounter }} commentaires non lus.</div>
+            <ul uib-pagination items-per-page="itemsPerPage" boundary-links="true" total-items="totalItems" ng-model="currentPage" class="pagination-sm" previous-text="&lsaquo;" next-text="&rsaquo;" first-text="&laquo;" last-text="&raquo;"></ul>
             <table class="table table-sm table-bordered">
                 <thead>
                 <tr>
+                    <th>#</th>
                     <th>Date</th>
                     <th>Commentaire</th>
                     <th>Actions</th>
                 </tr>
                 </thead>
                 <tbody>
-                <tr data-ng-repeat="log in logContainers">
+                <tr data-ng-repeat="log in logContainers|limitTo:itemsPerPage:(currentPage*itemsPerPage-itemsPerPage)">
+                    <td>{{ $index+1 }}</td>
                     <td>le {{ log.createDate | date:'dd-MM-yyyy à HH:mm'}}</td>
                     <td>
                         <div>
@@ -48,6 +52,7 @@
                 </tr>
                 </tbody>
             </table>
+            <ul uib-pagination items-per-page="itemsPerPage" boundary-links="true" total-items="totalItems" ng-model="currentPage" class="pagination-sm" previous-text="&lsaquo;" next-text="&rsaquo;" first-text="&laquo;" last-text="&raquo;"></ul>
         </div>
     </div>
 </main>
