--- a/app/System/Comment/tpl/Thread.html
+++ b/app/System/Comment/tpl/Thread.html
@@ -1,5 +1,5 @@
 <div class="card bg-body d-print-none" id="comment-thread">
-    <div id="comment-thread-header" data-ng-include="'/webapp/app/System/Comment/tpl/Thread-header.html'"></div>
+    <div id="comment-thread-header"><h3 class="card-header bg-light"><i class="fa fa-comment" aria-hidden="true"></i> Commentaires</h3></div>
     <div class="card-body">
         <div id="comment-thread-contribute" data-ng-include="'/webapp/app/System/Comment/tpl/Thread-contribute.html'"></div>
         <div id="comment-thread-content" data-ng-include="'/webapp/app/System/Comment/tpl/Thread-comments.html'"></div>
